test/files/neg/macro-invalidsig-params-namemismatch.check
Impls_Macros_1.scala:8: error: macro implementation has wrong shape:
 required: (c: scala.reflect.makro.Context)(x: c.Expr[Int], y: c.Expr[Int]): c.Expr[Any]
 found   : (c: scala.reflect.makro.Context)(y: c.Expr[Int], x: c.Expr[Int]): Nothing
parameter names differ: x != y
  def foo(x: Int, y: Int) = macro Impls.foo
                                        ^
one error found
